--- a/CSS/components/nav-bar.css
+++ b/CSS/components/nav-bar.css
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #fff8db;
+  background-color: #c7edd5;
   padding: 20px 50px;
   box-sizing: border-box;
   border-top: 1px solid rgba(121, 121, 121, 0.3);
