--- a/CSS/screens/friends.css
+++ b/CSS/screens/friends.css
@@ -42,7 +42,7 @@
 }
 
 #splash-screen {
-  background-color: yellow;
+  background-color: #a1865b;
   position: absolute;
   height: 100vh;
   width: 100vw;
