--- a/CSS/components/nav-bar.css
+++ b/CSS/components/nav-bar.css
@@ -3,13 +3,15 @@
   bottom: 0;
   width: 100%;
   background-color: #c7edd5;
-  padding: 20px 50px;
+  padding: 5px 50px;
   box-sizing: border-box;
   border-top: 1px solid rgba(121, 121, 121, 0.3);
 }
 .nav__list {
   display: flex;
   justify-content: space-between;
+  list-style: none;
+  padding-left: 0px;
 }
 .nav__link {
   color: #2e363e;
@@ -40,8 +42,8 @@
   height: 6px;
   border-radius: 3px;
   position: absolute;
-  right: -2px;
-  top: -10px;
+  right: -10px;
+  top: -16px;
 }
 
 @keyframes apeearBtnAnimation {
