--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,6 +15,7 @@
 @import "screens/more.css";
 @import "screens/settings.css";
 @import "screens/chat.css";
+@import "reset.css";
 
 @font-face {
   font-family: "DungGeunMo";
