--- a/CSS/screens/chat.css
+++ b/CSS/screens/chat.css
@@ -1,5 +1,6 @@
+
 #chat-screen {
-  background-color: #abc1d1;
+  background-color: #a6dfb4;
   height: 1000vh;
 }
 
@@ -44,20 +45,21 @@
 
 .message-row:nth-child(3) {
   position: absolute;
-  top: 270px;
+  top: 273px;
 }
 
 .chat_img {
+  border-radius: 15px;
   width: 50px;
   height: 50px;
-  padding: 0px 10px 0px 20px;
-  border-radius: 30%;
+  margin-left: 22px;
 }
 
 .message__author {
   opacity: 0.8;
   font-size: 20px;
-  margin-bottom: 5px;
+  margin-left: 9px;
+  margin-bottom: 6px;
   display: block;
   margin-bottom: 5px;
 }
@@ -163,4 +165,10 @@
 
 .reply__column button i {
   opacity: 1;
+}
+
+.des_icon{
+  
+  position: flex;
+  top:500px;
 }
