--- a/CSS/screens/more.css
+++ b/CSS/screens/more.css
@@ -10,14 +10,15 @@
 
 .more-suggestions__title {
   margin-bottom: 30px;
+  font-size: 25px;
 }
 
 .more-suggestions__icons {
   display: flex;
+  justify-content: space-between;
 }
 
 .more-suggestions__icon {
-  margin-right: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,12 +27,16 @@
 .more-suggestions__icon-image {
   width: 60px;
   height: 60px;
-  background-color: yellow;
+  background-color: #bdc5fc;
   border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
+}
+.sug-icon {
+  width: 45px;
+  height: 45px;
 }
 
 .more-suggestions__icon-image i {
