--- a/CSS/screens/chat.css
+++ b/CSS/screens/chat.css
@@ -1,4 +1,3 @@
-
 #chat-screen {
   background-color: #a6dfb4;
   height: 1000vh;
@@ -10,7 +9,7 @@
   box-sizing: border-box;
 }
 
-.message_chat{
+.message_chat {
   display: flex;
   justify-content: flex-start;
 }
@@ -32,25 +31,40 @@
   border-radius: 20px;
   margin-bottom: 25px;
 }
+@keyframes appearBubble {
+  from {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
 
 .message-row {
   width: 100%;
   display: flex;
+  animation: appearBubble 1s ease-in-out forwards;
+  opacity: 0;
 }
 
 .message-row:nth-child(2) {
   position: absolute;
   top: 170px;
+  animation-delay: 0.7s;
 }
 
 .message-row:nth-child(3) {
   position: absolute;
-  top: 287px;
+  top: 280px;
+  animation-delay: 2s;
 }
 
 .message-row:nth-child(4) {
   position: absolute;
-  top: 367px;
+  top: 350px;
+  animation-delay: 3s;
 }
 
 .chat_img {
@@ -103,21 +117,20 @@
   border-top-left-radius: 15px;
 }
 
-.message_chat_last{
+.message_chat_last {
   position: absolute;
   top: 350px;
   left: 0px;
   display: flex;
   flex-direction: row;
-
 }
 
-.last{
-  position:absolute;
-  top:450px;
+.last {
+  position: absolute;
+  top: 450px;
 }
 
-.me-first{
+.me-first {
   position: absolute;
   top: 30px;
 }
@@ -183,6 +196,6 @@
   opacity: 1;
 }
 
-.user-component{
+.user-component {
   margin: 6px 0px;
 }
