--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -40,7 +40,7 @@ body {
 :root {
   --bg-color: #fff8db;
   --purple-color: #d3d1ff;
-  --red-color: #e9c9c9;
+  --red-color: #e29c9c;
   --blue-color: #bdc5fc;
   --main-color: #c7edd5;
 }
