--- a/CSS/components/user-component.css
+++ b/CSS/components/user-component.css
@@ -90,8 +90,12 @@
   width: 60px;
   border-radius: 25px;
   margin: 0 20px 0 0;
-  background-color: var(--red-color);
+  background-color: var(--main-color);
 }
 .profile-img {
   width: 35px;
+}
+
+.pink {
+  background-color: var(--red-color);
 }
