--- a/CSS/components/no-mobile.css
+++ b/CSS/components/no-mobile.css
@@ -11,7 +11,7 @@
   font-size: 32px;
 }
 
-@media screen and (max-width: 645px) and (min-width: 540px) {
+@media screen and (max-width: 645px) {
   #no-mobile {
     display: none;
   }
