--- a/CSS/screens/profile-set.css
+++ b/CSS/screens/profile-set.css
@@ -9,21 +9,36 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 
 .account__inf .name {
   font-size: 35px;
   padding: 20px 0px;
 }
+
+@keyframes apearAccountBtn {
+  from {
+    transform: translateY(50px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
 .account__btn {
+  height: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   border-top: 2px solid rgba(0, 0, 0, 0.4);
-  padding: 0px 65px;
-  padding-top: 40px;
+  padding: 44px 65px;
+  background-color: rgba(222, 184, 135, 0.555);
 }
 .account__btn__icons {
+  will-change: transform;
+  animation: apearAccountBtn 1s ease-in-out forwards;
   display: flex;
   flex-direction: column;
   align-items: center;
